# Robustic

./: .gitignore  CLAUDE.md  README.md  dtw_offline_test.py  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
matlab_demo/: cosine_distance.m  dtw_cosine.m  dtw_cosine_demo.m  dtw_demo.m  dtw_offline_analysis.m  dtw_realtime_simulation.m  dtw_with_real_data.m  export_templates_for_matlab.py  model_MindMove_Model_sd_20260203_125755_protocol_test_alberto_96_32_rms_avg3_mv.mat  model_MindMove_Model_sd_20260203_131149_protocol_test_alberto_96_32_wl_avg3_mv.mat  model_MindMove_Model_sd_20260206_121332_test_patient.mat  model_MindMove_Model_sd_20260209_102710_afteraudiocue_15s_norew_9632_rms_avg3_5c.mat  reconstruct_path.m
mindmove/: config.py  main.py
mindmove/device_interfaces/: device.py  muovi.py
mindmove/device_interfaces/dicts/: muovi.py
mindmove/device_interfaces/enums/: device.py  muovi.py
mindmove/device_interfaces/gui/: muovi_widget.py
mindmove/gui/: mindmove.py  protocol.py  virtual_hand_interface.py
mindmove/gui/protocols/: bidirectional_training.py  guided_record.py  online.py  record.py  training.py
mindmove/gui/ui/: main_window.ui
mindmove/gui/ui_compiled/: main_window.py
mindmove/gui_custom_elements/: vispy_plot_widget.py
mindmove/model/: interface.py  offline_template_extraction.py  offline_test.py  plot_templates.py  template_study.py  templates_metrics.py
mindmove/model/core/: algorithm.py  dataset.py  decision_network.py  (+4 more)
mindmove/utils/: constants.py
(+21 files in other folders)
